package com.noairnobnb.model.enums;

/**
 * Tipo de cama no quarto duplo: comum (casal) ou Queen/King (maior conforto, tarifa
 * adicional distinta, conforme requisito do negócio).
 */
public enum TipoCamaCasal {
  COMUM,
  QUEEN_OU_KING
}
