package com.noairnobnb.model.enums;

public enum TipoQuarto {
  INDIVIDUAL,
  CASAL,
  FAMILIA
}

